--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -206,13 +206,13 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" class="angled-img">
+                            <a href="https://nukesdragons.com/fallout76/perks?v=1&s=5f638a9&d=sg2s01p00pg2po1ph2pp2pi2eo2eh2c62ic4ii0ir1a72an2a21ao0a04a30la0ld0lr0x03x43xm3xp3xq3l71li0lv1x83lk2lg2&m=c249fe86i&n=ClassicCaleb%20Commando" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/game-bloodborne-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Full Health Commando</h3>
-                                    <span class="date"><i class="fa fa-youtube-play"></i> ClassicCaleb Streams</span>
+                                    <span class="date"> <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> <i class="fa fa-youtube-play"></i> ClassicCaleb Streams </a></span>
                                 </div>
                             </a>
                         </div>
