--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -212,7 +212,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Full Health Commando</h3>
-                                    <span class="date"> <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> <i class="fa fa-youtube-play"></i> ClassicCaleb Streams </a></span>
+                                    <span class="date"> <href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> <i class="fa fa-youtube-play"></i> ClassicCaleb Streams</span>
                                 </div>
                             </a>
                         </div>
