--- a/builds.html
+++ b/builds.html
@@ -195,6 +195,7 @@
                     <div>
                         <div class="container">
                             <h1 class="h1">Community Builds</h1>
+                            <p class="lead"> Here we'll post community builds to make your own! </p>
                         </div>
                     </div>
                 </div>
