--- a/builds.html
+++ b/builds.html
@@ -195,7 +195,7 @@
                     <div>
                         <div class="container">
                             <h1 class="h1">Community Builds</h1>
-                            <p class="lead"> Here we'll post community builds to make your own! </p>
+                            <p class="lead"> Here we'll post community builds to make your own! Select a game below to get started. We'll be adding more builds. If you would like to share a build, let us know and we'll get it posted with credit to you!</p>
                         </div>
                     </div>
                 </div>
