--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -195,6 +195,7 @@
                     <div>
                         <div class="container">
                             <h1 class="h1">Fallout 76 Builds</h1>
+                            <p class="lead"> Fallout builds to get you started. Let us know if you have a build you'd like to share (with credit)! </p>
                         </div>
                     </div>
                 </div>
@@ -227,7 +228,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Placeholder Build</h3>
-                                    <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
+                                    <span class="date"><i class="fa fa-twitch"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
