--- a/builds.html
+++ b/builds.html
@@ -235,7 +235,7 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://" class="angled-img">
+                            <a href="fallout-builds.html" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/fallout500x375.jpg" alt="">
                                 </div>
