--- a/builds.html
+++ b/builds.html
@@ -213,6 +213,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Division 2</h3>
+                                    <span class="date">Coming Soon</span>
                                 </div>
                             </a>
                         </div>
@@ -227,6 +228,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>ESO</h3>
+                                    <span class="date">Coming Soon</span>
                                 </div>
                             </a>
                         </div>
@@ -255,6 +257,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Outriders</h3>
+                                    <span class="date">Coming Soon</span>
                                 </div>
                             </a>
                         </div>
