--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class=" dropdown dropdown-hover">
-                            <a href="https://u.pcloud.link/publink/show?code=kZrCrzXZhdGpSsrmObLzAJ97PbAxsVzx86FV"> Clips <span class="label"></span>
-                                <span class="label">plays</span>
+                          <li class=" dropdown dropdown-hover">
+                            <a href="builds.html"> Builds <span class="label"></span>
+                                <span class="label">community</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
