--- a/builds.html
+++ b/builds.html
@@ -118,13 +118,10 @@
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
                                     </li>
                                     <li>
-                                        <a href="https://trovo.live/ClassicCaleb"> Trovo </a>
+                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
                                     </li>
                                 </ul>
                                 <ul role="menu">
-                                    <li>
-                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
-                                    </li>
                                     <li>
                                         <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Live </a>
                                     </li>
@@ -222,13 +219,12 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://" class="angled-img">
+                            <a href="eso-builds.html" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/eso500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>ESO</h3>
-                                    <span class="date">Coming Soon</span>
                                 </div>
                             </a>
                         </div>
