--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
         </div>
         <!-- /Preloader -->
         <!-- Navbar -->
-        <nav class="navbar-youplay navbar navbar-default navbar-fixed-top">
+      <nav class="navbar-youplay navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="off-canvas" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -62,9 +62,9 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class=" dropdown dropdown-hover">
-                            <a href="https://u.pcloud.link/publink/show?code=kZrCrzXZhdGpSsrmObLzAJ97PbAxsVzx86FV"> Clips <span class="label"></span>
-                                <span class="label">plays</span>
+                         <li class=" dropdown dropdown-hover">
+                            <a href="builds.html"> Builds <span class="label"></span>
+                                <span class="label">community</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
@@ -95,13 +95,10 @@
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
                                     </li>
                                     <li>
-                                        <a href="https://trovo.live/ClassicCaleb"> Trovo </a>
+                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
                                     </li>
                                 </ul>
                                 <ul role="menu">
-                                    <li>
-                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
-                                    </li>
                                     <li>
                                         <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Live </a>
                                     </li>
