--- a/builds.html
+++ b/builds.html
@@ -247,13 +247,12 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://" class="angled-img">
+                            <a href="outriders-builds.html" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/outriders500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Outriders</h3>
-                                    <span class="date">Coming Soon</span>
                                 </div>
                             </a>
                         </div>
