--- a/eso-builds.html
+++ b/eso-builds.html
@@ -204,13 +204,13 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://xynodegaming.com/easy-tank/" class="angled-img">
+                            <a href="https://thetankclub.com/eso-tank-champion-points/" class="angled-img">
                                 <div class="img img-offset">
-                                    <img src="assets/images/dark/ESO-easytank.jpg" alt="">
+                                    <img src="assets/images/dark/eso-calebtank2-0.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
-                                    <h3>Xynode Easy Tank</h3>
-                                    <span class="date"> <i class="fa fa-youtube-play"></i> Xynode Gaming</span>
+                                    <h3>The Tank Club</h3>
+                                    <span class="date"> <i class="fa fa-youtube-play"></i> The Tank Club</span>
                                 </div>
                             </a>
                         </div>
