--- a/commands.html
+++ b/commands.html
@@ -192,6 +192,7 @@
                     <div>
                         <div class="container">
                             <h1 class="h1">Stream Commands</h1>
+                            <p class="lead"> Chat Commands to spice things up and get interactive! </p>
                         </div>
                     </div>
                 </div>
@@ -200,22 +201,23 @@
             <section class="youplay-content container">
                 <div class="col-sm-6">
                 <h2 class="mt-0">Soundboard Commands</h2>
-                <p><strong>!rogue</strong> - Division 2: Plays Rogue Agent enemy theme music (10 pts)</p>
-                <p><strong>!scorch</strong> - Fallout 76: Plays Legendary enemy theme music (10 pts)
-                <p><strong>!esoboss</strong> - ESO: Plays ESO Boss theme music (10 pts)</p>
-                <p><strong>!amazing</strong> - Plays Shaxx "This is amazing!" (5 pts)</p>
-                <p><strong>!badumtss</strong> - Plays a comedic drum (5 pts)</p>
-                <p><strong>!dundundun</strong> - Plays a plot twist sound (5 pts)</p>
-                <p><strong>!gg</strong> - Plays OG Fallout success music (5 pts)</p>
-                <p><strong>!rip</strong> - Plays video game death sound (5 pts)</p>
-                <p><strong>!sadtrombone</strong> - Plays sad trombone music (5 pts)</p>
-                <p><strong>!works</strong> - Todd Howard "it just works" (5 pts)</p>
+                <p><strong>!esoboss</strong> - ESO: Plays ESO Boss theme music</p>
+                <p><strong>!nuke</strong> - Fallout 76: Plays Nuke Launch Warning</p>
+                <p><strong>!rogue</strong> - Division 2: Plays Rogue Agent enemy theme music</p>
+                <p><strong>!scorch</strong> - Fallout 76: Plays Legendary enemy theme music</p>
+                <p><strong>!amazing</strong> - Plays Shaxx "This is amazing!"</p>
+                <p><strong>!badumtss</strong> - Plays a comedic drum</p>
+                <p><strong>!dundundun</strong> - Plays a plot twist sound</p>
+                <p><strong>!gg</strong> - Plays OG Fallout success music</p>
+                <p><strong>!rip</strong> - Plays video game death sound</p>
+                <p><strong>!sadtrombone</strong> - Plays sad trombone music</p>
+                <p><strong>!works</strong> - Todd Howard "it just works"</p>
                 </div>
                 <div class="col-sm-6">
                 <h2 class="mt-0">Regular Commands</h2>
-                <p><strong>!points</strong> - Check your points and ranking</p>
-                <p><strong>!clip</strong> - Clip the last 45 seconds</p>
-                <p><strong>!replay</strong> - replay the last clip on stream</p>
+                <p><strong>!camright</strong> - Move the facecam to the right for 60 seconds</p>
+                <p><strong>!howtolink</strong> - Learn to link platform accounts to combine points</p>
+                <p><strong>!hug</strong> - Hug a user</p>
                 <p><strong>!lurk</strong> - Obligatory lurk command</p>
                 <p><strong>!schedule</strong> - My weekly game schedule</p>
                 <p><strong>!discord</strong> - Link to our Discord</p>
