--- a/commands.html
+++ b/commands.html
@@ -244,9 +244,9 @@
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">
-                                        <i class="fab fa-youtube"></i>
-                                        <span>Streams on Youtube</span>
+                                    <a href="https://www.twitch.tv/ClassicCaleb">
+                                        <i class="fab fa-twitch"></i>
+                                        <span>Streams on Twitch</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
