--- a/builds.html
+++ b/builds.html
@@ -204,21 +204,6 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/division500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Division 2</h3>
-                                    <span class="date">Coming Soon</span>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /Single News Block -->
-                    <!-- Single News Block -->
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="news-one">
                             <a href="eso-builds.html" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/eso500x375.jpg" alt="">
@@ -239,20 +224,6 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Fallout 76</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /Single News Block -->
-                    <!-- Single News Block -->
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="news-one">
-                            <a href="outriders-builds.html" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/outriders500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Outriders</h3>
                                 </div>
                             </a>
                         </div>
@@ -279,9 +250,9 @@
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">
-                                        <i class="fab fa-youtube"></i>
-                                        <span>Streams on Youtube</span>
+                                    <a href="https://www.twitch.tv/ClassicCaleb">
+                                        <i class="fab fa-twitch"></i>
+                                        <span>Streams on Twitch</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
