--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
             <section class="youplay-features container mt-60 mb-30">
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-youtube-play"></i>
-                        <h3>Youtube</h3>
-                        <div> Two channels! Streaming on ClassicCaleb Streams, tech videos on StreamTechTV! </div>
+                        <i class="fa fa-twitch"></i>
+                        <h3>Twitch</h3>
+                        <div> Daily streams on Twitch! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-desktop"></i>
+                        <i class="fa fa-youtube-play"></i>
                         <h3>Tech</h3>
                         <div> Straight to the point streaming tech tutorials and information! </div>
                     </div>
@@ -235,13 +235,6 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
-                            <div class="col-sm-6">
-                                <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/CCstreams2.png" alt=""></a>
-                            </div>
- 
-                            <div class="col-sm-6">
-                                <a href="https://www.youtube.com/StreamTechTV" target="_blank"><img src="assets/images/StreamTechTV300.png" alt=""></a>
-                            </div>
                         </div>
                     </div>
                 </div>
