--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                     <div class="feature angled-bg">
                         <i class="fa fa-twitch"></i>
                         <h3>Twitch</h3>
-                        <div> Daily streams on Twitch! </div>
+                        <div> Daily streams on Twitch for casual chat and information! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
                         <i class="fa fa-users"></i>
                         <h3>Community</h3>
-                        <div> We game together and play with viewers in a casual setting! </div>
+                        <div> We game together and play with viewers in a casual community! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -230,16 +230,6 @@
                 </div>
              </section>
             <!-- /Features -->
-            <!-- Demo -->
-             <div class="container mt-60 mb-120">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <div class="row vertical-gutter">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /Demo -->
             <!-- Realistic Battles -->
             <section class="youplay-banner youplay-banner-parallax big">
                 <div class="image" data-speed="0.4">
