--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-youtube-play"></i>
+                                        <i class="fa fa-twitch"></i>
                                         <h3>Upcoming Game</h3>
-                                        <a class="btn btn-info" href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">&nbsp; Posted Here</a>
+                                        <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a>
                                     </div>
                                 </div>
                             </div>
