--- a/commands.html
+++ b/commands.html
@@ -219,6 +219,7 @@
                 <p><strong>!howtolink</strong> - Learn to link platform accounts to combine points</p>
                 <p><strong>!hug</strong> - Hug a user</p>
                 <p><strong>!lurk</strong> - Obligatory lurk command</p>
+                <p><strong>!puppy</strong> - Show the puppy cam for 2 minutes</p>
                 <p><strong>!schedule</strong> - My weekly game schedule</p>
                 <p><strong>!discord</strong> - Link to our Discord</p>
                 <p><strong>!bethesda</strong> - Show my Bethesda ID</p>
