--- a/tip.html
+++ b/tip.html
@@ -112,8 +112,8 @@
                             </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
-                                <span class="label">parts</span>
+                            <a href="https://kit.co/ClassicCaleb"> Specs <span class="label"></span>
+                                <span class="label">gear</span>
                             </a>
                         </li>
                     </ul>
