--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <section class="youplay-features container mt-60 mb-30">
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-twitch"></i>
+                        <i class="fa fa-twitch" href="https://twitch.tv/classiccaleb"></i>
                         <h3>Twitch</h3>
                         <div> Daily streams on Twitch for casual chat and information! </div>
                     </div>
