--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
             <!-- Features -->
             <section class="youplay-features container mt-60 mb-30">
                 <div class="col-sm-4">
-                    <div class="feature angled-bg">
-                        <i class="fa fa-twitch" href="https://twitch.tv/classiccaleb"></i>
+                    <div class="feature angled-bg" href="https://twitch.tv/classiccaleb">
+                        <i class="fa fa-twitch"></i>
                         <h3>Twitch</h3>
                         <div> Daily streams on Twitch for casual chat and information! </div>
                     </div>
