--- a/index.html
+++ b/index.html
@@ -208,12 +208,11 @@
             <!-- Features -->
             <section class="youplay-features container mt-60 mb-30">
                 <div class="col-sm-4">
-                    <a href="https://twitch.tv/classiccaleb">
                     <div class="feature angled-bg">
                         <i class="fa fa-twitch"></i>
-                        </a>
-                        <h3>Twitch</h3>
+                        <h3>Streams</h3>
                         <div> Daily streams on Twitch for casual chat and information! </div>
+                        <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb">&nbsp; Twitch</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
