--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
                         <i class="fa fa-twitch"></i>
-                        <h3>Streams</h3>
+                        <h3>Twitch</h3>
                         <div> Daily streams on Twitch for casual chat and information! </div>
-                        <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb">&nbsp; Twitch</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
