--- a/index.html
+++ b/index.html
@@ -224,8 +224,10 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
+                    <a href="https://youtube.com/streamtechtv">
                     <div class="feature angled-bg">
                         <i class="fa fa-youtube-play"></i>
+                        </a>
                         <h3>Tech</h3>
                         <div> Straight to the point streaming tech tutorials and information! </div>
                     </div>
