--- a/commands.html
+++ b/commands.html
@@ -209,7 +209,7 @@
                 <p><strong>!badumtss</strong> - Plays a comedic drum</p>
                 <p><strong>!dundundun</strong> - Plays a plot twist sound</p>
                 <p><strong>!gg</strong> - Plays OG Fallout success music</p>
-                <p><strong>!rip</strong> - Plays video game death sound</p>
+                <p><strong>!rip</strong> - Makes fun of me for dying</p>
                 <p><strong>!sadtrombone</strong> - Plays sad trombone music</p>
                 <p><strong>!works</strong> - Todd Howard "it just works"</p>
                 </div>
