--- a/tip.html
+++ b/tip.html
@@ -78,7 +78,7 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="https://botisimo.com/u/classiccaleb/leaderboard/global"> Leaderboard <span class="label"></span>
+                            <a href="https://streamelements.com/classiccaleb/leaderboard"> Leaderboard <span class="label"></span>
                                 <span class="label">community</span>
                             </a>
                         </li>
