--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
                 <div class="info container align-center">
                     <div>
                         <h2>Thanks for your support!</h2>
-                        <em class="lead">Never expected, always appreciated! Tip with Crypto!</a></em>
+                        <em class="lead">Never expected, always appreciated! Alerts on stream if live. Tips are non-refundable.</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Tip</a>
+                        <a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Crypto Tips</a><a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Crypto Tips</a>
                     </div>
                 </div>
             </section>
