--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <h2>Thanks for your support!</h2>
                         <em class="lead">Never expected, always appreciated! Alerts on stream if live. Tips are non-refundable.</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Crypto Tips</a><a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Crypto Tips</a>
+                        <a class="btn btn-info" href="https://streamelements.com/classiccaleb/tip">Regular Tips</a><a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Crypto Tips</a>
                     </div>
                 </div>
             </section>
