--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -214,12 +214,12 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="placeholder.html" class="angled-img">
+                            <a href="https://nukesdragons.com/fallout76/perks?v=1&s=d336f6a&d=xn3x42xp3xq3x81x03sr2sq2s32sx0sg2pe2eh2c62cu2id2ip2s12ii0a72a80a04lt2ls2lg2l71le0ib4&m=01c29fed6i&wp=w8&n=ClassicCaleb%20PA" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/game-dark-souls-ii-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
-                                    <h3>Placeholder Build</h3>
+                                    <h3>Full Health Heavy PA</h3>
                                     <span class="date"><i class="fa fa-twitch"></i> Awesome User</span>
                                 </div>
                             </a>
