--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -205,7 +205,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Full Health Commando</h3>
-                                    <span class="date"> <i class="fa fa-youtube-play"></i> ClassicCaleb Streams</span>
+                                    <span class="date"> <i class="fa fa-twitch"></i> ClassicCalebTV</span>
                                 </div>
                             </a>
                         </div>
@@ -220,7 +220,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Full Health Heavy PA</h3>
-                                    <span class="date"><i class="fa fa-twitch"></i> Awesome User</span>
+                                    <span class="date"><i class="fa fa-twitch"></i> ClassicCalebTV</span>
                                 </div>
                             </a>
                         </div>
