--- a/index2.html
+++ b/index2.html
@@ -107,7 +107,7 @@
                             <div class="dropdown-menu">
                                 <ul role="menu">
                                     <li>
-                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
+                                        <a href="https://guilded.gg/ClassicCalebTV"> Guilded </a>
                                     </li>
                                     <li>
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
@@ -182,7 +182,7 @@
 -->
             <section class="youplay-banner banner-top youplay-banner-parallax">
                 <div class="image" data-speed="0.4">
-                    <img src="assets/images/dark/banner-bg.jpg" alt="" class="jarallax-img">
+                    <img src="assets/images/dark/banner-bg2.jpg" alt="" class="jarallax-img">
                 </div>
                 <div class="info">
                     <div>
