--- a/index2.html
+++ b/index2.html
@@ -50,8 +50,7 @@
         <!-- Social Likes -->
         <link rel="stylesheet" href="assets/vendor/social-likes/dist/social-likes_flat.css" />
         <!-- FontAwesome -->
-        <script defer src="assets/vendor/fontawesome-free/js/all.js"></script>
-        <script defer src="assets/vendor/fontawesome-free/js/v4-shims.js"></script>
+        <link rel="stylesheet" href="/assets/css/all.css"> <!--load all styles -->
         <!-- Youplay -->
         <link rel="stylesheet" href="assets/css/youplay.css">
         <!-- RTL (uncomment this to enable RTL support) -->
