--- a/index2.html
+++ b/index2.html
@@ -257,7 +257,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-twitch"></i>
+                                        <i class="fab fa-twitch"></i>
                                         <h3>Upcoming Game</h3>
                                         <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a>
                                     </div>
@@ -277,7 +277,7 @@
                         <p class="lead">Hop in our Guilded Server for a friendly community to game with or for technical support for streaming! Streamers automatically show at the top of our member list while they are live.</p>
                         </div>
                         <div class="col-sm-6">
-                <iframe src="https://www.guilded.gg/canvas_index.html?route=%2Fcanvas%2Fembed%2Fteamcard%2FJjJzaa0j&size=large" width="553" height="350" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://www.guilded.gg/canvas_index.html?route=%2Fcanvas%2Fembed%2Fteamcard%2FJjJzaa0j" width="268" height="380" frameborder="0" scrolling="no"></iframe>
                         </div>
                    </div>
                 </div>
