--- a/index2.html
+++ b/index2.html
@@ -204,7 +204,7 @@
                 <div class="col-sm-4">
                     <a href="https://twitch.tv/classiccaleb">
                     <div class="feature angled-bg">
-                        <i class="fa fa-twitch"></i>
+                        <i class="fab fa-twitch"></i>
                         </a>
                         <h3>Twitch</h3>
                         <div> Daily streams on Twitch for casual chat and information! </div>
@@ -220,7 +220,7 @@
                 <div class="col-sm-4">
                     <a href="https://youtube.com/streamtechtv">
                     <div class="feature angled-bg">
-                        <i class="fa fa-youtube-play"></i>
+                        <i class="fab fa-youtube-play"></i>
                         </a>
                         <h3>Tech</h3>
                         <div> Straight to the point streaming tech tutorials and information! </div>
