--- a/index2.html
+++ b/index2.html
@@ -220,7 +220,7 @@
                 <div class="col-sm-4">
                     <a href="https://youtube.com/streamtechtv">
                     <div class="feature angled-bg">
-                        <i class="fab fa-youtube-play"></i>
+                        <i class="fab fa-youtube"></i>
                         </a>
                         <h3>Tech</h3>
                         <div> Straight to the point streaming tech tutorials and information! </div>
