--- a/404.html
+++ b/404.html
@@ -27,8 +27,7 @@
         <!-- Social Likes -->
         <link rel="stylesheet" href="assets/vendor/social-likes/dist/social-likes_flat.css" />
         <!-- FontAwesome -->
-        <script defer src="assets/vendor/fontawesome-free/js/all.js"></script>
-        <script defer src="assets/vendor/fontawesome-free/js/v4-shims.js"></script>
+        <link rel="stylesheet" href="/assets/css/all.css"> <!--load all styles -->
         <!-- Youplay -->
         <link rel="stylesheet" href="assets/css/youplay.css">
         <!-- RTL (uncomment this to enable RTL support) -->
@@ -84,7 +83,7 @@
                             <div class="dropdown-menu">
                                 <ul role="menu">
                                     <li>
-                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
+                                        <a href="https://guilded.gg/ClassicCalebTV"> Guilded </a>
                                     </li>
                                     <li>
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
@@ -179,7 +178,7 @@
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
                 <div class="image" data-speed="0.4" data-img-position="50% 0%">
-                    <img src="assets/images/dark/footer-bg.jpg" alt="" class="jarallax-img">
+                    <img src="assets/images/newwave/footer-bg.jpg" alt="" class="jarallax-img">
                 </div>
                 <div class="wrapper">
                     <!-- Social Buttons -->
@@ -188,8 +187,8 @@
                             <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="https://discord.gg/GMTGJwX">
-                                        <i class="fab fa-discord"></i>
+                                    <a href="https://guilded.gg/ClassicCalebTV">
+                                        <i class="fab fa-guilded"></i>
                                         <span>Join on Discord</span>
                                     </a>
                                 </div>
