--- a/builds.html
+++ b/builds.html
@@ -240,7 +240,7 @@
                                 <div class="social-icon">
                                     <a href="https://guilded.gg/ClassicCalebTV">
                                         <i class="fab fa-guilded"></i>
-                                        <span>Join on Discord</span>
+                                        <span>Join on Guilded</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
