--- a/eso-builds.html
+++ b/eso-builds.html
@@ -50,8 +50,7 @@
         <!-- Social Likes -->
         <link rel="stylesheet" href="assets/vendor/social-likes/dist/social-likes_flat.css" />
         <!-- FontAwesome -->
-        <script defer src="assets/vendor/fontawesome-free/js/all.js"></script>
-        <script defer src="assets/vendor/fontawesome-free/js/v4-shims.js"></script>
+        <link rel="stylesheet" href="/assets/css/all.css"> <!--load all styles -->
         <!-- Youplay -->
         <link rel="stylesheet" href="assets/css/youplay.css">
         <!-- RTL (uncomment this to enable RTL support) -->
@@ -107,7 +106,7 @@
                             <div class="dropdown-menu">
                                 <ul role="menu">
                                     <li>
-                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
+                                        <a href="https://guilded.gg/ClassicCalebTV"> Guilded </a>
                                     </li>
                                     <li>
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
@@ -205,7 +204,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>The Tank Club</h3>
-                                    <span class="date"> <i class="fa fa-youtube-play"></i> The Tank Club</span>
+                                    <span class="date"> <i class="fab fa-youtube"></i> The Tank Club</span>
                                 </div>
                             </a>
                         </div>
@@ -220,7 +219,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Placeholder Build</h3>
-                                    <span class="date"><i class="fa fa-twitch"></i> Awesome User</span>
+                                    <span class="date"><i class="fab fa-twitch"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
@@ -235,7 +234,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Placeholder Build</h3>
-                                    <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
+                                    <span class="date"><i class="fab fa-youtube"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
@@ -250,7 +249,7 @@
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Placeholder Build</h3>
-                                    <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
+                                    <span class="date"><i class="fab fa-youtube"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
@@ -262,7 +261,7 @@
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
                 <div class="image" data-speed="0.4" data-img-position="50% 0%">
-                    <img src="assets/images/dark/footer-bg.jpg" alt="" class="jarallax-img">
+                    <img src="assets/images/newwave/footer-bg.jpg" alt="" class="jarallax-img">
                 </div>
                 <div class="wrapper">
                     <!-- Social Buttons -->
@@ -271,9 +270,9 @@
                             <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="https://discord.gg/GMTGJwX">
-                                        <i class="fab fa-discord"></i>
-                                        <span>Join on Discord</span>
+                                    <a href="https://guilded.gg/ClassicCalebTV">
+                                        <i class="fab fa-guilded"></i>
+                                        <span>Join on Guilded</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
