--- a/404.html
+++ b/404.html
@@ -61,6 +61,11 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
+                        <li class=" dropdown dropdown-hover">
+                            <a href="https://www.guilded.gg/ClassicCalebTV/blog/Community-News"> Blog <span class="label"></span>
+                                <span class="label">news</span>
+                            </a>
+                        </li>
                          <li class=" dropdown dropdown-hover">
                             <a href="builds.html"> Builds <span class="label"></span>
                                 <span class="label">community</span>
@@ -69,11 +74,6 @@
                         <li class=" dropdown dropdown-hover">
                             <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%69%6E%66%6F%40%63%6C%61%73%73%69%63%63%61%6C%65%62%2E%70%72%6F"> Contact <span class="label"></span>
                                 <span class="label">email</span>
-                            </a>
-                        </li>
-                        <li class=" dropdown dropdown-hover">
-                            <a href="https://streamelements.com/classiccaleb/leaderboard"> Leaderboard <span class="label"></span>
-                                <span class="label">community</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
