--- a/builds.html
+++ b/builds.html
@@ -89,6 +89,7 @@
                                 <span class="label">news</span>
                             </a>
                         </li>
+                        <li class=" dropdown dropdown-hover">
                             <a href="builds.html"> Builds <span class="label"></span>
                                 <span class="label">community</span>
                             </a>
